粘贴板调试

--- a/transport/src/main/resources/application.properties
+++ b/transport/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=transport
+server.port=11111
+server.servlet.context-path=/transport
 spring.servlet.multipart.max-file-size=16MB
 spring.servlet.multipart.max-request-size=16MB
-server.port=11111
-server.servlet.context-path=/remote-desktop-control
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
