添加注册中心

--- a/stream/src/main/resources/application.properties
+++ b/stream/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=stream
 server.servlet.context-path=/stream
 server.port=11110
+#eureka
+eureka.client.service-url.defaultZone=http://${eureka-service-ip:172.16.1.37}:${eureka-sevice-port:11113}/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
