分布式实现

--- a/registry/src/main/resources/application.properties
+++ b/registry/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=registry
 server.port=11113
-#eureka??
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+#eureka
+eureka.client.fetch-registry=true
+eureka.instance.instance-id=${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
+eureka.client.service-url.defaultZone=http://${eureka-service-ip:172.16.1.37}:${eureka-sevice-port:11113}/eureka/
 
