--- a/clipboard/pom.xml
+++ b/clipboard/pom.xml
@@ -9,11 +9,12 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>transport</artifactId>
+    <artifactId>clipboard</artifactId>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.github.springstudent</groupId>
@@ -32,10 +33,32 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <!--log4j2-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+        <!--jdbc-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jdbc</artifactId>
+        </dependency>
+        <!--jdbc-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <!--hutool-->
         <dependency>
@@ -44,7 +67,7 @@
         </dependency>
         <dependency>
             <groupId>io.github.springstudent</groupId>
-            <artifactId>protocol</artifactId>
+            <artifactId>GyJdbc</artifactId>
         </dependency>
     </dependencies>
     <build>
@@ -55,7 +78,7 @@
                 <version>2.3.4.RELEASE</version>
                 <!--这里写上main方法所在类的路径-->
                 <configuration>
-                    <mainClass>io.github.springstudent.ada.transport.TransportServer</mainClass>
+                    <mainClass>io.github.springstudent.ada.clipboard.ClipboardServer</mainClass>
                     <includeSystemScope>true</includeSystemScope>
                 </configuration>
                 <executions>
